			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04f: *********************************

BUG: (2/23/06) Undo after crash can crash too.
FIX: Add parameter "full" to EDatabase.undo . In "full" mode undo doesn't rely of
     EDatabase correctness.

IMP: (2/23/06) LibraryReaders doen't try to repair arcs ends. They start RapairJob instead.
     RepairJob detects bad arc end and reports them to constraint system. Repair step is undoable.
     IO regressions scripts were modifed to changed number of repair errors.

BUG: (2/23/06, DN) Redisplay slow.
FIX: In User.endBatch calls wnd.redisplayContents only most once per Window.

BUG: (2/23/06, SMR) Auto-routing is very slow (Bug #510)
FIX: Now using quad-trees in auto-routing.

BUG: (2/23/06, DN) Library is not marked as changed after deleting a cell (Bug #826).
FIX: Put "lib.setCHANGED()" IN "CELL.KILL()".

BUG: (2/23/06, DN) For Jobs started on server result is not serialized (Bug #824, #825).
FIX: Remove "else" in Client.EJobEvent.run method.

IMP: (2/22/06, SMR) Changed the basic GRID unit (in DBMath.java) from 100 to 400
     to allow smaller fractions, and especially half, quarter, etc. (can now handle 1/16).

************************* Version 8.04e: *********************************

BUG: (2/22/06, GVG) Bug in DRC.getLastDRCDateBasedOnBits(Cell cell, int activeBits) due to changes from Integer[] to
Long in cell date.
FIX: Handle Integer[] and Long as object type.

BUG: (2/22/06, GVG) Cells should not be added into goodDRCDates list if they have a valid date from previous run
(same Electric version) (Bug #507).
FIX: Check if (!validVersion || lastGoodDate == null).

IMP: (2/21/06, GVG) More code for fill generator.

BUG: (2/21/06, DN) JELIB reader silently reads longs as ints.
FIX: Use Long.valueOf(s) which throws exception on error.

BUG: (2/21/06, DN) Assertion deleting NodeInst (Bug #823).